--- a/app/tracker/blueprints/page/templates/page/dashboard.html
+++ b/app/tracker/blueprints/page/templates/page/dashboard.html
@@ -120,7 +120,7 @@
                             </div>
                     </div>
                     <div class="panel-body">
-                        <div class=row">
+                        <div class="row">
                             <h5 id="d_ylabel-axis" class="rotate">Number of operations</h5>
                             <div class="col-sm-12 text-center">
                                 <div id="user-activity-today"  user-data=""></div>
