--- a/app/tracker/templates/layouts/app.html
+++ b/app/tracker/templates/layouts/app.html
@@ -18,8 +18,8 @@
         <ul class="nav navbar-top-links navbar-right">
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <i class="fa fa-user fa-fw"></i> {{ current_user.fullname() }}
-                    ({{ current_user.ROLE[current_user.role] }}) <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-user fa-fw"></i>EDIT current_user.fullname
+                    EDIT current_user.role <i class="fa fa-caret-down"></i>
                 </a>
                 <ul class="dropdown-menu dropdown-user">
                     <li><a href="{{ url_for('user.profile') }}"><i class="fa fa-user fa-fw"></i> User Profile</a></li>
