--- a/app/tracker/blueprints/user/templates/user/users.html
+++ b/app/tracker/blueprints/user/templates/user/users.html
@@ -17,17 +17,12 @@
             </div>
             <div class="col-lg-8">
                 <div class="pull-right">
-                    {{ items.paginate(users) }}
+                    {{ items.paginate(paginator) }}
                 </div>
             </div>
         </div>
-        {% if users.total == 0 %}
+        {% if not users %}
             <h3>No results found</h3>
-            {% if request.args.get('q') %}
-                <p>Try limiting or removing your search terms.</p>
-            {% else %}
-                <p>There are no users present.</p>
-            {% endif %}
         {% else %}
             <div class="row">
                 <div class="col-lg-12">
@@ -35,19 +30,20 @@
                         <table class="table table-bordered  table-condensed table-hover table-striped">
                             <thead>
                             <tr>
-                                <th class="col-header">{{ items.sort('id', '#') }}</th>
-                                <th class="col-header">Fullname</th>
+                                <th class="col-header">{{ items.sort('id', 'Id') }}</th>
+                                <th class="col-header">{{ items.sort('fullname', 'Fullname') }}</th>
                                 <th class="col-header">{{ items.sort('email', 'Email') }}</th>
                                 <th class="col-header">{{ items.sort('role', 'Role') }}</th>
                             </tr>
                             </thead>
                             <tbody>
-                            {% for user in users.items %}
+                            {% for user in users %}
                                 <tr>
-                                    <td>{{ user.id }}</td>
-                                    <td><a href="{{ url_for('user.profile', q=user.fullname()) }}">{{ user.fullname() }}</a></td>
+                                    <td><a data-toggle="tooltip" data-placement="top" title="{{ user.id }}">{{ user.id[:7] }}...</a></td>
+                                    <td><a href="{{ url_for('user.profile', q=user.fullname, user_id=user.id) }}">
+                                        {{ user.fullname }}</a></td>
                                     <td>{{ user.email }}</td>
-                                    <td>{{ user.role }}</td>
+                                    <td>{{ user.role|default('-', true) }}</td>
                                 </tr>
                             {% endfor %}
                             </tbody>
@@ -59,7 +55,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="pull-right">
-                        {{ items.paginate(users) }}
+                        {{ items.paginate(paginator) }}
                     </div>
                 </div>
             </div>
