--- a/app/tracker/blueprints/synset/templates/synset/synset-attributes-history.html
+++ b/app/tracker/blueprints/synset/templates/synset/synset-attributes-history.html
@@ -2,7 +2,7 @@
 {% import 'macros/items.html' as items %}
 {% import 'macros/form.html' as f with context %}
 
-{% block title %}Synset History{% endblock %}
+{% block title %}Synset Attributes History{% endblock %}
 
 {% block content %}
     <div id="page-wrapper">
@@ -13,7 +13,7 @@
         </div>
         <div class="row margin-bottom-15">
             <div class="col-sm-12">
-                {% call f.form_tag('synset.synsets_history', css_class='form-inline', method='get') %}
+                {% call f.form_tag('synset.synsets_attributes_history', css_class='form-inline', method='get') %}
 
                     <div class="input-group input-group-sm date" id='date_from'>
                         <input id="date_from" name="date_from" type="text" class="form-control"
@@ -49,7 +49,7 @@
                 {% endcall %}
             </div>
         </div>
-        {% if synsets['pages'] == 0 %}
+        {% if synsets_attributes_history['pages'] == 0 %}
             <h3>No results found</h3>
             <p>Try limiting or removing your search terms.</p>
         {% else %}
@@ -59,22 +59,25 @@
                         <table class="table table-bordered table-condensed table-hover table-striped">
                             <thead>
                             <colgroup span="3"></colgroup>
-                            <colgroup span="2"></colgroup>
-                            <colgroup span="2"></colgroup>
+                            <colgroup span="1"></colgroup>
+                            <colgroup span="3"></colgroup>
                             <tr>
                                 <th colspan="3" class="text-center" scope="colgroup">Operation</th>
-                                <th colspan="2" class="text-center" scope="colgroup">Synset</th>
+                                <th colspan="1" class="text-center" scope="colgroup">Synset</th>
+                                <th colspan="3" class="text-center" scope="colgroup">Attributes</th>
                             </tr>
                             <tr>
                                 <th scope="col" class="col-header">#</th>
                                 <th scope="col" class="col-header">Audit Log</th>
                                 <th scope="col" class="col-header">Operation</th>
                                 <th scope="col" class="col-header">ID</th>
-                                <th scope="col" class="col-header">Units</th>
+                                <th scope="col" class="col-header">Comment</th>
+                                <th scope="col" class="col-header">Definition</th>
+                                <th scope="col" class="col-header">Error comment</th>
                             </tr>
                             </thead>
                             <tbody>
-                            {% for synset in synsets['synsets'] %}
+                            {% for synset in synsets_attributes_history['synset_atttributes'] %}
                                 {% if synset['operation'] == 1 %}
                                     <tr class="info">
                                 {% elif synset['operation'] == 0 %}
@@ -104,13 +107,11 @@
                             </div>
                             </td>
                             <td>
-                                <a href="{{ url_for('synset.synset_by_id', id=synset['id']) }}"> {{ synset['id'] }}</a>
+                                <a href="{{ url_for('synset.synset_by_id', id=synset['synset_id']) }}"> {{ synset['synset_id'] }}</a>
                             </td>
-                            <td>
-                                {% if "unit_strings" in synset %}
-                                    {{ synset['unit_strings'] }}
-                                {% endif %}
-                            </td>
+                                <td>{% if "comment" in synset %} {{ synset['comment'] }} {% endif %}</td>
+                                <td>{% if "definition" in synset %} {{ synset['definition'] }} {% endif %}</td>
+                                <td>{% if "error_comment" in synset %} {{ synset['error_comment'] }} {% endif %}</td>
                             </tr>
                             {% endfor %}
                             </tbody>
@@ -122,7 +123,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="pull-right">
-                        {{ items.paginate(synsets) }}
+                        {{ items.paginate(synsets_attributes_history) }}
                     </div>
                 </div>
             </div>
