--- a/app/tracker/blueprints/synset/templates/synset/synset-relations-history.html
+++ b/app/tracker/blueprints/synset/templates/synset/synset-relations-history.html
@@ -30,10 +30,10 @@
                     <script type="text/javascript">
                         $(function () {
                             $('#date_from').datetimepicker({
-                                format: 'YYYY-MM-DD'
+                                format: 'DD-MM-YYYY'
                             });
                              $('#date_to').datetimepicker({
-                                format: 'YYYY-MM-DD'
+                                format: 'DD-MM-YYYY'
                             });
                         });
                     </script>
@@ -61,10 +61,10 @@
                                 <option value="">Select Relation Type</option>
                             {% endif %}
                             {%  for r in relations %}
-                                <option value="{{ r[0] }}"
-                               {%  if request.args.get('relation_type', '') ==  r[0]|string %}
+                                <option value="{{ r['relation_id'] }}"
+                               {%  if request.args.get('relation_type', '') ==  r['relation_id']|string %}
                                   selected
-                               {%  endif %}>{{ r[1] }}</option>
+                               {%  endif %}>{{ r['relation_name'] }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -75,7 +75,7 @@
                 {% endcall %}
             </div>
         </div>
-        {% if history.total == 0 %}
+        {% if history['pages'] == 0 %}
             <h3>No results found</h3>
             <p>Try limiting or removing your search terms.</p>
         {% else %}
@@ -84,12 +84,12 @@
                     <div class="table-responsive">
                         <table class="table table-bordered table-condensed table-hover table-striped">
                             <thead>
-                            <colgroup span="4"></colgroup>
+                            <colgroup span="3"></colgroup>
                             <colgroup span="2"></colgroup>
                             <colgroup span="2"></colgroup>
                             <colgroup span="2"></colgroup>
                             <tr>
-                                <th colspan="4" class="text-center" scope="colgroup">Operation</th>
+                                <th colspan="3" class="text-center" scope="colgroup">Operation</th>
                                 <th colspan="2" class="text-center" scope="colgroup">Source Synset</th>
                                 <th colspan="2" class="text-center" scope="colgroup">Relation</th>
                                 <th colspan="2" class="text-center" scope="colgroup">Target Synset</th>
@@ -107,52 +107,56 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for r in history.items %}
-                                 {% if r.operation=='created' %}
+                            {% for r in history['synset_relations'] %}
+                                 {% if r['operation'] == 0 %}
                                     <tr class="success">
-                                 {% elif r.operation=='removed' %}
+                                 {% elif r['operation'] == 1 %}
+                                    <tr class="info">
+                                 {% elif r['operation'] == 2 %}
                                     <tr class="danger">
                                 {% endif %}
-                            <td>{{ r.id }}</td>
+                            <td>{{ r['timestamp'] }}</td>
                             <td>
                               <div class="text-center small-log bold-log">
-                                {{ r.user }}
+                                {{ r['editor'] }}
                               </div>
                                 <div class="text-center small-log">
                                 <time class="short-date"
-                                      data-datetime="{{ r.datetime }}">{{ r.datetime }}</time>
+                                      data-datetime="{{ r['timestamp'] }}">{{ r['timestamp'] }}</time>
                               </div>
 
                             </td>
                             <td>
                             <div class="text-center">
-                                {% if r.operation=='created' %}
+                                {% if r['operation'] == 0 %}
                                     <span class="label label-success">Created</span>
-                                {% elif r.operation=='removed' %}
+                                {% elif r['operation'] == 1 %}
+                                    <span class="label label-info">Modified</span>
+                                {% elif r['operation'] == 2 %}
                                     <span class="label label-danger">Removed</span>
                                 {% endif %}
                             </div>
                             </td>
                             <td>
-                                {% if r.source_id is not none %}
-                                    <a href="{{ url_for('synset.synset_by_id', id=r.source_id) }}">{{ r.source_id }}</a>
+                                {% if "source_synset_id" in r %}
+                                    <a href="{{ url_for('synset.synset_by_id', id=r['source_synset_id']) }}">{{ r['source_synset_id'] }}</a>
                                 {% endif %}
                             </td>
                             <td>
-                                 {% if r.source_unitstr is not none %}
-                                    {{ r.source_unitstr }}
+                                 {% if "source_synset_lemma" in r %}
+                                    {{ r['source_synset_lemma'] }}
                                 {% endif %}
                             </td>
-                                <td>{{ r.relation_id }}</td>
-                                <td>{{ r.relation_name }}</td>
+                                <td>{{ r['relation_id'] }}</td>
+                                <td>{{ r['relation_name'] }}</td>
                             <td>
-                                {% if r.target_id is not none %}
-                                    <a href="{{ url_for('synset.synset_by_id', id=r.target_id) }}">{{ r.target_id }}</a>
+                                {% if "target_synset_id" in r %}
+                                    <a href="{{ url_for('synset.synset_by_id', id=r['target_synset_id']) }}">{{ r['target_synset_id'] }}</a>
                                 {% endif %}
                             </td>
                             <td>
-                                {% if r.target_unitstr is not none %}
-                                    {{ r.target_unitstr }}
+                                {% if "target_synset_lemma" in r %}
+                                    {{ r['target_synset_lemma'] }}
                                 {% endif %}
                             </td>
                             </tr>
