--- a/app/tracker/blueprints/user/templates/user/profile.html
+++ b/app/tracker/blueprints/user/templates/user/profile.html
@@ -51,9 +51,9 @@
                                 <thead>
                                 <tr>
                                     <th colspan="3" class="text-center" scope="colgroup">Sense</th>
-                                    <th colspan="2" class="text-center" scope="colgroup">Sense Relation</th>
+                                    <th colspan="3" class="text-center" scope="colgroup">Sense Relation</th>
                                     <th colspan="3" class="text-center" scope="colgroup">Synset</th>
-                                    <th colspan="2" class="text-center" scope="colgroup">Synset Relation</th>
+                                    <th colspan="3" class="text-center" scope="colgroup">Synset Relation</th>
                                     <th rowspan="2" class="text-center" scope="colgroup">Total</th>
                                 </tr>
                                 <tr>
@@ -61,30 +61,32 @@
                                     <th class="col-header bg-info">Modified</th>
                                     <th class="col-header bg-danger">Removed</th>
                                     <th class="col-header bg-success">Created</th>
+                                    <th class="col-header bg-info">Modified</th>
                                     <th class="col-header bg-danger">Removed</th>
                                     <th class="col-header bg-success">Created</th>
                                     <th class="col-header bg-info">Modified</th>
                                     <th class="col-header bg-danger">Removed</th>
                                     <th class="col-header bg-success">Created</th>
+                                    <th class="col-header bg-info">Modified</th>
                                     <th class="col-header bg-danger">Removed</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                {% for s in stats %}
-                                    <tr>
-                                        <td class="bg-success text-right">{{ s['1'] }}</td>
-                                        <td class="bg-info text-right">{{ s['2'] }}</td>
-                                        <td class="bg-danger text-right">{{ s['3'] }}</td>
-                                        <td class="bg-success text-right">{{ s['4'] }}</td>
-                                        <td class="bg-danger text-right"> {{ s['5'] }}</td>
-                                        <td class="bg-success text-right">{{ s['6'] }}</td>
-                                        <td class="bg-info text-right">{{ s['7'] }}</td>
-                                        <td class="bg-danger text-right">{{ s['8'] }}</td>
-                                        <td class="bg-success text-right">{{ s['9'] }}</td>
-                                        <td class="bg-danger text-right">{{ s['10'] }}</td>
-                                        <td class="text-right text-right"><b>{{ s['total'] }}</b></td>
-                                    </tr>
-                                {% endfor %}
+                                <tr>
+                                    <td class="bg-success text-right">{% if stats|length > 0 %} {{ stats[0]['senses_created'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-info text-right">{% if stats|length > 0 %} {{ stats[0]['senses_modified'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-danger text-right">{% if stats|length > 0 %} {{ stats[0]['senses_removed'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-success text-right">{% if stats|length > 0 %} {{ stats[0]['sense_relations_created'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-info text-right">{% if stats|length > 0 %} {{ stats[0]['sense_relations_modified'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-danger text-right">{% if stats|length > 0 %} {{ stats[0]['sense_relations_removed'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-success text-right">{% if stats|length > 0 %} {{ stats[0]['synsets_created'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-info text-right">{% if stats|length > 0 %} {{ stats[0]['synsets_modified'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-danger text-right">{% if stats|length > 0 %} {{ stats[0]['synsets_removed'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-success text-right">{% if stats|length > 0 %} {{ stats[0]['synset_relations_created'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-info text-right">{% if stats|length > 0 %} {{ stats[0]['synset_relations_modified'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="bg-danger text-right">{% if stats|length > 0 %} {{ stats[0]['synset_relations_removed'] }} {% else %} 0 {% endif %}</td>
+                                    <td class="text-right text-right"><b>{% if stats|length > 0 %} {{ stats[0]['total'] }} {% else %} 0 {% endif %}</b></td>
+                                </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -102,7 +104,7 @@
                         <div class="row">
                             <h5 id="d_ylabel-axis" class="rotate">Number of operations</h5>
                             <div class="col-sm-12 text-center">
-                                <div id="user-activity-today" user-data="{{ request.args.get('q', current_user.get_fullname()) }}"></div>
+                                <div id="user-activity-today" user-data="{{ request.args.get('q', current_user.get_email()) }}"></div>
                                 <h5 id="d_xlabel-axis">Hour</h5>
                                 <div id="no-user-activity"><h4>No user activity found</h4></div>
                                 <img id="user-activity-today-spinner"
@@ -125,7 +127,7 @@
                         <div class="row">
                             <h5 id="m_ylabel-axis" class="rotate">Number of operations</h5>
                             <div class="col-sm-12 text-center">
-                                <div id="user-activity-monthly" user-data="{{ request.args.get('q', current_user.get_fullname()) }}"></div>
+                                <div id="user-activity-monthly" user-data="{{ request.args.get('q', current_user.get_email()) }}"></div>
                                 <h5 id="m_xlabel-axis">Day</h5>
                                 <div id="m_no-user-activity"><h4>No user activity found</h4></div>
                                 <img id="user-activity-monthly-spinner"
@@ -144,4 +146,5 @@
                 user_activity_monthly();
             });
         </script>
+    </div>
 {% endblock %}
