--- a/app/tracker/blueprints/user/templates/user/users-activity.html
+++ b/app/tracker/blueprints/user/templates/user/users-activity.html
@@ -32,10 +32,10 @@
                     <script type="text/javascript">
                         $(function () {
                             $('#date_from').datetimepicker({
-                                format: 'YYYY-MM-DD'
+                                format: 'DD-MM-YYYY'
                             });
                             $('#date_to').datetimepicker({
-                                format: 'YYYY-MM-DD'
+                                format: 'DD-MM-YYYY'
                             });
                         });
                     </script>
@@ -55,9 +55,9 @@
                             <tr>
                                 <th rowspan="2" class="text-center" scope="colgroup">User</th>
                                 <th colspan="3" class="text-center" scope="colgroup">Sense</th>
-                                <th colspan="2" class="text-center" scope="colgroup">Sense Relation</th>
+                                <th colspan="3" class="text-center" scope="colgroup">Sense Relation</th>
                                 <th colspan="3" class="text-center" scope="colgroup">Synset</th>
-                                <th colspan="2" class="text-center" scope="colgroup">Synset Relation</th>
+                                <th colspan="3" class="text-center" scope="colgroup">Synset Relation</th>
                                 <th rowspan="2" class="text-center" scope="colgroup">Total</th>
                             </tr>
                             <tr>
@@ -65,11 +65,13 @@
                                 <th class="col-header bg-info">Modified</th>
                                 <th class="col-header bg-danger">Removed</th>
                                 <th class="col-header bg-success">Created</th>
+                                <th class="col-header bg-info">Modified</th>
                                 <th class="col-header bg-danger">Removed</th>
                                 <th class="col-header bg-success">Created</th>
                                 <th class="col-header bg-info">Modified</th>
                                 <th class="col-header bg-danger">Removed</th>
                                 <th class="col-header bg-success">Created</th>
+                                <th class="col-header bg-info">Modified</th>
                                 <th class="col-header bg-danger">Removed</th>
                             </tr>
                             </thead>
@@ -78,32 +80,36 @@
                                     {% if s['user'] != 'None' %}
                                 <tr>
                                     <td><a href="{{ url_for('user.profile', q=s['user']) }}">{{ s['user'] }}</a></td>
-                                    <td class="bg-success text-right">{{ s['1'] }}</td>
-                                    <td class="bg-info text-right">{{ s['2'] }}</td>
-                                    <td class="bg-danger text-right">{{ s['3'] }}</td>
-                                    <td class="bg-success text-right">{{ s['4'] }}</td>
-                                    <td class="bg-danger text-right"> {{ s['5'] }}</td>
-                                    <td class="bg-success text-right">{{ s['6'] }}</td>
-                                    <td class="bg-info text-right">{{ s['7'] }}</td>
-                                    <td class="bg-danger text-right">{{ s['8'] }}</td>
-                                    <td class="bg-success text-right">{{ s['9'] }}</td>
-                                    <td class="bg-danger text-right">{{ s['10'] }}</td>
+                                    <td class="bg-success text-right">{{ s['senses_created'] }}</td>
+                                    <td class="bg-info text-right">{{ s['senses_modified'] }}</td>
+                                    <td class="bg-danger text-right">{{ s['senses_removed'] }}</td>
+                                    <td class="bg-success text-right">{{ s['sense_relations_created'] }}</td>
+                                    <td class="bg-info text-right"> {{ s['sense_relations_modified'] }}</td>
+                                    <td class="bg-danger text-right">{{ s['sense_relations_removed'] }}</td>
+                                    <td class="bg-success text-right">{{ s['synsets_created'] }}</td>
+                                    <td class="bg-info text-right">{{ s['synsets_modified'] }}</td>
+                                    <td class="bg-danger text-right">{{ s['synsets_removed'] }}</td>
+                                    <td class="bg-success text-right">{{ s['synset_relations_created'] }}</td>
+                                    <td class="bg-info text-right">{{ s['synset_relations_modified'] }}</td>
+                                    <td class="bg-danger text-right">{{ s['synset_relations_removed'] }}</td>
                                     <td class="text-right text-right"><b>{{ s['total'] }}</b></td>
                                 </tr>
                                     {% endif %}
                                 {% endfor %}
                             <tr>
                                 <td class="text-right"><b>Total</b></td>
-                                <td class="text-right"><b>{{ total['1'] }}</b></td>
-                                <td class="text-right"><b>{{ total['2'] }}</b></td>
-                                <td class="text-right"><b>{{ total['3'] }}</b></td>
-                                <td class="text-right"><b>{{ total['4'] }}</b></td>
-                                <td class="text-right"><b>{{ total['5'] }}</b></td>
-                                <td class="text-right"><b>{{ total['6'] }}</b></td>
-                                <td class="text-right"><b>{{ total['7'] }}</b></td>
-                                <td class="text-right"><b>{{ total['8'] }}</b></td>
-                                <td class="text-right"><b>{{ total['9'] }}</b></td>
-                                <td class="text-right"><b>{{ total['10'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_senses_created'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_senses_modified'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_senses_removed'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_sense_relations_created'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_sense_relations_modified'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_sense_relations_removed'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_synsets_created'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_synsets_modified'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_synsets_removed'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_synset_relations_created'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_synset_relations_modified'] }}</b></td>
+                                <td class="text-right"><b>{{ total['total_synset_relations_removed'] }}</b></td>
                                 <td class="text-right"><b>{{ total['total'] }}</b></td>
                             </tr>
                             </tbody>
@@ -112,5 +118,5 @@
                 </div>
             </div>
         {% endif %}
-
+    </div>
 {% endblock %}
